test/ci/back-end/fail/bind_2.rav
proc p() {
  ghost var x: Int;
  x :| x < 7 && 10 < x;
}